--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <!-- Input section -->
          <div class="input-group">
             <input
-                input="text"
+                type="text"
                 id="nameInput"
                 placeholder="Enter your name here..."
                 aria-label="Name input field"
