Fix error state readability - remove shake animation, extend timeout to 2s

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <input
                 type="text"
                 id="nameInput"
-                placeholder="Enter your name here..."
+                placeholder="Type your name and press Enter..."
                 aria-label="Name input field"
             >
          </div>
